fix(security): remove hardcoded secrets, fix CORS, harden actuator and JWT logging
C-1: Remove JWT_SECRET fallback — startup fails if env var is not set
C-2: Remove hardcoded DB credentials from application.yml and application-prod.yml
C-3: CORS allowCredentials only with explicit origins; wildcard disables credentials
A-1: Replace ex.printStackTrace() with logger.error() in GlobalExceptionHandler
A-2: /actuator/health and /actuator/info are public; all other actuator endpoints require ADMIN role; show-details: when-authorized
A-4: validateToken logs a typed warning per failure (expired/unsupported/malformed/signature/empty)
M-2: Minimum password length raised from 6 to 8 characters in RegisterCommand
M-3: ValidAttributeMap custom constraint on EvaluateRequest.attributes (max 50 entries, keys 50 chars, values 200 chars)
B-1: SSE heartbeat every 30 s via @Scheduled to keep proxy connections alive; @EnableScheduling on main class

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>